test/parser/should_fail/comments3.souc.bad
import commens

{; comment ;} bokerd comment ;} 
main() = do
	x <- 42 ; a comment
	print x
